fix: remove horizontal overflow

--- a/src/assets/sass/styles.sass
+++ b/src/assets/sass/styles.sass
@@ -21,6 +21,7 @@ body,
   scroll-behavior: smooth
   height: 100%
   // text-align: justify
+  overflow-x: hidden
   background: $primary-invert !important
 
 h1, h2, h3, h4, h5, h6
